--- a/index.html
+++ b/index.html
@@ -42,6 +42,14 @@
         <img src="./assets/icon/like.svg" alt="Like">
 
     </div><!--END SEARCHLARGE-->
+
+    <div class="searchto"> <!--INIT SEARCHTO-->
+        <div class="searchto-imginput">
+            <p>To:</p>
+            <img src="./assets/icon/stick-black.svg" alt="Digitar">
+            <input  type="text" class="searchto-imginput__input" placeholder="">
+        </div>
+    </div><!--END SEARCHTO-->
     
 </body>
 </html>
