Feat: status-bar

--- a/messenger-call.html
+++ b/messenger-call.html
@@ -13,5 +13,14 @@
         <img src="./assets/icon/microfone_call.svg" alt="Microfone">
         <img src="./assets/icon/call.svg" alt="Telefonar">
     </div>
+
+    <div class="status-bar">
+        <p>9:41</p>
+        <div class="status-bar__status">
+            <img src="./assets/icon/conection.svg" alt="Conecção">
+            <img src="./assets/icon/celular-wifi.svg" alt="Wi-Fi">
+            <img src="./assets/icon/battery.svg" alt="Bateria">
+        </div>
+    </div>
 </body>
 </html>
