Feat: Navbar-dialog

--- a/messenger-call.html
+++ b/messenger-call.html
@@ -22,5 +22,9 @@
             <img src="./assets/icon/battery.svg" alt="Bateria">
         </div>
     </div>
+
+    <div class="navbar-dialog">
+        <img src="./assets/icon/dialog.svg" alt="Mensagem">
+    </div>
 </body>
 </html>
