Feat: navbar-calling

--- a/messenger-call.html
+++ b/messenger-call.html
@@ -26,5 +26,14 @@
     <div class="navbar-dialog">
         <img src="./assets/icon/dialog.svg" alt="Mensagem">
     </div>
+
+        <div class="navbar-calling">
+            <img src="./assets/images/image1.png" alt="Foto">
+            <div class="navbar-calling__text">
+                <h1>Martha Craig</h1>
+                <p>Contacting...</p>
+            </div>
+        </div>
+
 </body>
 </html>
