Feat: content call

--- a/messenger-call.html
+++ b/messenger-call.html
@@ -8,24 +8,20 @@
     <title>Call | Messenger</title>
 </head>
 <body>
-    <div class="call">
-        <img src="./assets/icon/voice.svg" alt="Alto Falante">
-        <img src="./assets/icon/microfone_call.svg" alt="Microfone">
-        <img src="./assets/icon/call.svg" alt="Telefonar">
-    </div>
+    <div class="content-call">
 
-    <div class="status-bar">
-        <p>9:41</p>
-        <div class="status-bar__status">
-            <img src="./assets/icon/conection.svg" alt="Conecção">
-            <img src="./assets/icon/celular-wifi.svg" alt="Wi-Fi">
-            <img src="./assets/icon/battery.svg" alt="Bateria">
+        <div class="status-bar">
+            <p>9:41</p>
+            <div class="status-bar__status">
+                <img src="./assets/icon/conection.svg" alt="Conecção">
+                <img src="./assets/icon/celular-wifi.svg" alt="Wi-Fi">
+                <img src="./assets/icon/battery.svg" alt="Bateria">
+            </div>
         </div>
-    </div>
 
-    <div class="navbar-dialog">
-        <img src="./assets/icon/dialog.svg" alt="Mensagem">
-    </div>
+        <div class="navbar-dialog">
+            <img src="./assets/icon/dialog.svg" alt="Mensagem">
+        </div>
 
         <div class="navbar-calling">
             <img src="./assets/images/image1.png" alt="Foto">
@@ -34,6 +30,18 @@
                 <p>Contacting...</p>
             </div>
         </div>
+
+        <div class="call">
+            <img src="./assets/icon/voice.svg" alt="Alto Falante">
+            <img src="./assets/icon/microfone_call.svg" alt="Microfone">
+            <img src="./assets/icon/call.svg" alt="Telefonar">
+        </div>
+        
+            <div class="footer">
+                <img src="./assets/icon/bar.svg" alt="Falar">
+            </div>
+    </div>
+    
 
 </body>
 </html>
