Feat: messenger-video

--- a/messenger-video.html
+++ b/messenger-video.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style/page/messenger-video.css">
     <title>Vídeo | Messenger</title>
 </head>
 <body>
     
-    <div class="content-call">
+    <div class="content-video">
 
         <div class="status-bar">
             <p>9:41</p>
@@ -19,11 +20,12 @@
             </div>
         </div>
 
-        <div class="navbar-dialog">
+        <div class="navbar-dialog__video">
             <img src="./assets/icon/dialog.svg" alt="Mensagem">
+            <img src="./assets/icon/cam-call.svg" alt="Camrera">
         </div>
 
-        <div class="navbar-calling">
+        <div class="navbar-calling navbar-calling__video">
             <img src="./assets/images/image1.png" alt="Foto">
             <div class="navbar-calling__text">
                 <h1>Martha Craig</h1>
@@ -31,8 +33,11 @@
             </div>
         </div>
 
-        <div class="call">
-            <img src="./assets/icon/voice.svg" alt="Alto Falante">
+        <div class="smiles">
+            <img src="./assets/icon/smiles.svg" alt="Sorriso">
+        </div>
+
+        <div class="call__video">
             <img src="./assets/icon/microfone_call.svg" alt="Microfone">
             <img src="./assets/icon/call.svg" alt="Telefonar">
         </div>
